--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -67,6 +67,7 @@
         &.icon-open-book {
           background: url(#{$img-path}icon-open-book.svg) center center no-repeat;
           background-size: 36px 36px;
+          padding: 10px 10px;
           margin-right: 10px;
           height: 36px;
           width: 52px;
