--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -633,6 +633,11 @@
     }
   }
 
+  .dashboards-monthly-chart {
+    display: flex;
+    flex-direction: column;
+  }
+
   .fbf-beneficiaries {
 
     .header {
