--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1987,6 +1987,7 @@ div.page-participant.group {
 
 div.page-participant.acute-illness,
 div.page-participant.nutrition,
+div.page-participant.home-visit,
 div.page-participant.prenatal {
     padding-bottom: 35px;
 
@@ -1996,7 +1997,7 @@ div.page-participant.prenatal {
     text-align: center;
   }
 
-  .label-antenatal-visit {
+  .label-visit {
     margin-bottom: 30px;
     margin-top: 40px;
   }
