--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -462,6 +462,11 @@ h3.ui.header {
   background-size: 122px 122px;
 }
 
+.icon-task-feeding {
+  background-image: url(#{$img-path}icon-feeding-white.svg);
+  background-size: 122px 122px;
+}
+
 // Tasks horizontal scroll
 
 .ui.task.segment {
