Better styling [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2309,6 +2309,8 @@ div.page-case-management {
 
   .ui.segment.filters {
     background-color: $color-white;
+    display: flex;
+    justify-content: space-around;
     min-height: 60px;
     padding: 25px;
 
@@ -2317,7 +2319,7 @@ div.page-case-management {
       border-radius: 3px;
       color: $color-dark-gray;
       font-size: 24px;
-      font-weight: 700;
+      font-weight: 600;
       padding: 15px;
       text-transform: none;
     }
