View assesment as part of entry [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2350,6 +2350,11 @@ div.page-case-management {
       font-weight: bold;
       padding: 20px;
       text-align: center;
+
+      .entry {
+        display: flex;
+        justify-content: space-around;
+      }
     }
   }
 }
