--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -23,11 +23,11 @@ $color-light-blue:          #29C2FF;
 $color-lighter-blue:        #E0E7FF;
 $color-white:               #FFFFFF;
 $color-svg-grid:            #8097B1;
-$color-symptom-general:     #D4145A;
-$color-symptom-respiratory: #F7931E;
-$color-symptom-gi:          #4C06FF;
+$color-orange-dark:         #F7931E;
+$color-blue:                #4C06FF;
 $color-green:               #25D625;
 $color-yellow:              #D9E021;
+$color-cyan:                #03B5AA;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
