Some fixes [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2370,7 +2370,7 @@ div.page-case-management {
       padding: 20px;
       text-align: center;
 
-      .entry {
+      .follow-up-entry {
         display: flex;
         justify-content: space-around;
       }
