--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2371,8 +2371,59 @@ div.page-case-management {
       text-align: center;
 
       .follow-up-entry {
+        border-bottom: 1px solid $color-text;
         display: flex;
-        justify-content: space-around;
+        margin-top: 15px;
+        padding-bottom: 15px;
+
+        .name {
+          align-self: center;
+          font-size: 20px;
+          font-weight: 700;
+          text-align: left;
+          width: 200px;
+        }
+
+        .due {
+          align-self: center;
+          border-radius: 10px;
+          color: $color-white;
+          font-size: 15px;
+          font-weight: bold;
+          margin: 3px 5px;
+          padding: 0 10px;
+          text-transform: uppercase;
+          width: 130px;
+
+          &.overdue {
+            background: $color-velvet;
+          }
+
+          &.today {
+            background: $color-cyan;
+          }
+
+          &.this-week {
+            background: $color-orange;
+          }
+
+          &.this-month {
+            background: $color-blue;
+          }
+        }
+
+        .assesment {
+          align-self: center;
+          font-size: 18px;
+          font-weight: 600;
+          margin-left: 10px;
+          text-align: left;
+          width: 230px;
+
+          p {
+            margin-bottom: 0;
+          }
+        }
       }
     }
   }
