--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2428,11 +2428,19 @@ div.page-case-management {
         .icon-forward {
           align-self: center;
           background: url(#{$img-path}icon-forward-blue.svg) center center no-repeat;
-          background-size: 45px 45px;
-          height: 45px;
+          background-size: 45px 50px;
+          height: 50px;
           width: 45px;
         }
       }
+    }
+  }
+
+  .overlay .content {
+    font-size: 28px;
+
+    .person-name {
+      color: $color-primary;
     }
   }
 }
