--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1031,6 +1031,7 @@ div.page-activity.home-visit {
       &.select {
         background: $color-white;
         border: 2px solid $color-light-gray;
+        color: $color-text;
         padding: 5px;
         width: 50%;
       }
