--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -452,7 +452,8 @@ h3.ui.header {
   background-size: 78px 78px;
 }
 
-.icon-task-send-to-hc {
+.icon-task-send-to-hc,
+.icon-task-appointment-confirmation {
   background-image: url(#{$img-path}icon-health-center-white.svg);
   background-size: 78px 78px;
 }
@@ -482,14 +483,10 @@ h3.ui.header {
   background-size: 92px 92px;
 }
 
-.icon-task-birth-plan {
+.icon-task-birth-plan,
+.icon-task-pregnancy-outcome {
   background-image: url(#{$img-path}icon-birth-plan-white.svg);
   background-size: 122px 122px;
-}
-
-.icon-task-appointment-confirmation {
-  background-image: url(#{$img-path}icon-health-center-white.svg);
-  background-size: 78px 78px;
 }
 
 // Tasks horizontal scroll
