--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1389,6 +1389,14 @@ div.page-activity.home-visit {
       .checkbox-select-input {
         margin-bottom: 20px;
       }
+
+      .form.appointment-confirmation {
+        min-height: 330px;
+
+        .label {
+          margin-bottom: 30px;
+        }
+      }
     }
   }
 }
