Fix styling [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1383,6 +1383,8 @@ div.page-activity.home-visit {
 
     .full.content {
 
+      @include next-steps;
+
       .helper {
         margin-bottom: 20px;
       }
