Improve 'Enrol Neworn' UI

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1400,6 +1400,10 @@ div.page-activity.home-visit {
           margin-bottom: 30px;
         }
       }
+
+      .form.newborn-enrolment {
+        min-height: 150px;
+      }
     }
   }
 }
