--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2430,6 +2430,10 @@ div.page-case-management {
           &.this-month {
             background: $color-blue;
           }
+
+          &.next-month {
+            background: $color-primary;
+          }
         }
 
         .assesment {
