Alter Newborn enrollment flow [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1415,6 +1415,11 @@ div.page-activity.home-visit {
 
       .form.newborn-enrolment {
         min-height: 150px;
+
+        button {
+          margin-top: 20px;
+          width: 50%;
+        }
       }
     }
   }
