--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -58,7 +58,6 @@
   &.chw-filters {
     background-color: transparent;
     min-height: 40px;
-    //margin-left: 35px;
     padding: 25px;
     display: flex;
     justify-content: center;
@@ -69,16 +68,12 @@
       border: solid 2px $color-primary;
       color: $color-primary;
       border-radius: 3px;
+      width: 300px;
       font-size: 24px;
       font-weight: 700;
       padding: 15px;
       text-transform: none;
     }
-
-    //button.active {
-    //  background-color: $color-primary;
-    //  color: $color-white;
-    //}
   }
 
     .content {
