--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -4,7 +4,7 @@
   .timestamp {
     color: $color-white;
     text-align: left;
-    margin-top: 10px;
+    margin: 10px 0px;
   }
 
   .current-month {
