--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -31,12 +31,53 @@
 
   .case-management-label {
     color: $color-white;
-    margin-top: 50px;
-    margin-bottom: 10px;
     font-weight: 500;
+    margin-bottom: 10px;
+    margin-top: 50px;
   }
 
   .ui.segment {
+
+    .content .very.basic.table {
+        width: 100%;
+
+        thead {
+
+          th {
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: normal;
+            padding: 2px 4px 2px;
+            border-left: 0 none;
+            border-right: 0 none;
+            border-bottom: 1px solid $color-text;
+            color: $color-text;
+            text-transform: uppercase;
+
+            &.phone-number {
+              width: 26%;
+            }
+          }
+        }
+
+        tbody {
+
+          td {
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+            border: 0 none;
+            color: black;
+            padding: 4px 4px 24px;
+            vertical-align: top;
+
+            &.phone-number {
+              justify-content: center;
+              text-align-last: center;
+            }
+          }
+        }
+      }
 
     &.filters {
       background-color: $color-light-background;
@@ -95,8 +136,8 @@
       button {
         background-color: $color-white;
         border: solid 2px $color-primary;
-        color: $color-primary;
         border-radius: 3px;
+        color: $color-primary;
         width: 300px;
         font-size: 24px;
         font-weight: 700;
@@ -111,51 +152,7 @@
       }
     }
 
-    .content {
-
-      .very.basic.table {
-        width: 100%;
-
-        thead {
-
-          th {
-            font-size: 16px;
-            line-height: 24px;
-            font-weight: normal;
-            padding: 2px 4px 2px;
-            border-left: 0 none;
-            border-right: 0 none;
-            border-bottom: 1px solid $color-text;
-            color: $color-text;
-            text-transform: uppercase;
-
-            &.phone-number {
-              width: 26%;
-            }
-          }
-        }
-
-        tbody {
-
-          td {
-            font-weight: normal;
-            font-size: 20px;
-            line-height: 24px;
-            border: 0 none;
-            color: black;
-            padding: 4px 4px 24px;
-            vertical-align: top;
-
-            &.phone-number {
-              justify-content: center;
-              text-align-last: center;
-            }
-          }
-        }
-      }
-    }
-
-    &.family-planning {
+    &.donut-chart {
       margin-bottom: 40px;
       margin-top: 40px;
 
@@ -217,11 +214,19 @@
           }
 
           svg.pie-chart {
-            position: absolute;
-            width: 400px;
             height: 400px;
-            top: 35px;
             left: 55px;
+            position: absolute;
+            top: 35px;
+            width: 400px;
+          }
+
+          svg.pie-chart.fever {
+            height: 500px;
+            left: -235px;
+            position: absolute;
+            top: 4px;
+            width: 500px;
           }
 
           .legend {
@@ -246,6 +251,35 @@
                 margin-left: 9px;
               }
             }
+          }
+        }
+      }
+    }
+
+    &.donut-chart.fever {
+      min-height: 300px;
+
+      .row .content {
+
+        svg.pie-chart {
+          height: 500px;
+          left: -185px;
+          position: absolute;
+          top: 4px;
+          width: 500px;
+        }
+
+        .in-chart {
+          font-size: 18px;
+          left: -150px;
+          top: 100px;
+        }
+
+        .legend {
+          margin: 0 0 0 400px;
+
+          .legend-item span {
+            font-size: 18px;
           }
         }
       }
