Fixes [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2040,6 +2040,7 @@ div.page-participant.group {
 div.page-participant.acute-illness,
 div.page-participant.nutrition,
 div.page-participant.home-visit,
+div.page-participant.well-child,
 div.page-participant.prenatal {
     padding-bottom: 35px;
 
