--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -4,7 +4,7 @@
   .timestamp {
     color: $color-white;
     text-align: left;
-    margin: 10px 0px;
+    margin: 30px 0px 10px;
     font-size: 18px;
   }
 
@@ -141,8 +141,13 @@
         width: 300px;
         font-size: 24px;
         font-weight: 700;
+        margin-right:25px;
         padding: 15px;
         text-transform: none;
+
+        &:last-child {
+          margin-right: 0px;
+        }
 
         &.active {
           background-color: $color-primary;
@@ -153,7 +158,6 @@
     }
 
     &.donut-chart {
-      margin-bottom: 40px;
       margin-top: 40px;
 
       .header {
@@ -593,7 +597,8 @@
 
   .dashboard-card.chw {
     min-height: 150px;
-    padding: 10px;
+    padding: 20px 10px 20px;
+    border-top:4px solid $color-primary;
 
     .value {
       color: $color-light-background;
