Style icon [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -493,6 +493,10 @@ h3.ui.header {
   background-image: url(#{$img-path}icon-nutritionassessment-white.svg);
 }
 
+.icon-task-ecd {
+  background-image: url(#{$img-path}icon-ecd.svg);
+}
+
 // Tasks horizontal scroll
 
 .ui.task.segment {
