Change for view, and drop unneeded actions

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1875,19 +1875,19 @@ input::placeholder {
   }
 }
 
-.icon-laboratory-barcode-photo {
+.icon-laboratory-barcode {
   .active &:after {
-    background-image: url(#{$img-path}icon-barcode-photo-white.svg), url(#{$img-path}icon-selected-circle.svg);
+    background-image: url(#{$img-path}icon-barcode-white.svg), url(#{$img-path}icon-selected-circle.svg);
     background-size: cover;
   }
 
   .completed &:after {
-    background-image: url(#{$img-path}icon-barcode-photo-white.svg), url(#{$img-path}icon-completed-circle.svg);
+    background-image: url(#{$img-path}icon-barcode-white.svg), url(#{$img-path}icon-completed-circle.svg);
     background-size: cover;
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-barcode-photo-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
+    background-image: url(#{$img-path}icon-barcode-gray.svg), url(#{$img-path}icon-uncompleted-circle.svg);
     background-size: cover;
   }
 }
