--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1389,7 +1389,8 @@ div.page-activity.nutrition {
 }
 
 div.page-activity.prenatal,
-div.page-activity.home-visit {
+div.page-activity.home-visit,
+div.page-activity.well-child {
 
   .ui.full.segment {
 
