'Not taken' checkbox [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1389,8 +1389,7 @@ div.page-activity.nutrition {
 }
 
 div.page-activity.prenatal,
-div.page-activity.home-visit,
-div.page-activity.well-child {
+div.page-activity.home-visit {
 
   .ui.full.segment {
 
@@ -1420,6 +1419,30 @@ div.page-activity.well-child {
         button {
           margin-top: 20px;
           width: 50%;
+        }
+      }
+    }
+  }
+}
+
+div.page-activity.well-child {
+
+  .ui.full.segment {
+
+    .full.content {
+
+      @include next-steps;
+
+      .ui.checkbox.activity {
+        margin-top: 30px;
+
+        label {
+          padding-left: 40px;
+        }
+
+        label:before,
+        label:after {
+          left: 0;
         }
       }
     }
