Drop duplicate icon

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -418,7 +418,7 @@ h3.ui.header {
 }
 
 .icon-task-symptoms {
-  background-image: url(#{$img-path}icon-symptoms.svg);
+  background-image: url(#{$img-path}icon-symptoms-white.svg);
   background-size: 78px 78px;
 }
 
