Add Albendazole sub activity [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -2174,17 +2174,31 @@ input::placeholder {
   }
 }
 
-.icon-mebendezole {
+.icon-albendazole {
   .active &:after {
-    background-image: url(#{$img-path}icon-mebendezole-white.svg);
+    background-image: url(#{$img-path}icon-pills-box-white.svg);
   }
 
   .completed &:after {
-    background-image: url(#{$img-path}icon-mebendezole-white.svg), url(#{$img-path}icon-completed-circle.svg);
+    background-image: url(#{$img-path}icon-pills-box-white.svg), url(#{$img-path}icon-completed-circle.svg);
   }
 
   &:after {
-    background-image: url(#{$img-path}icon-mebendezole-gray.svg);
+    background-image: url(#{$img-path}icon-pills-box-gray.svg);
+  }
+}
+
+.icon-mebendezole {
+  .active &:after {
+    background-image: url(#{$img-path}icon-pills-box-white.svg);
+  }
+
+  .completed &:after {
+    background-image: url(#{$img-path}icon-pills-box-white.svg), url(#{$img-path}icon-completed-circle.svg);
+  }
+
+  &:after {
+    background-image: url(#{$img-path}icon-pills-box-gray.svg);
   }
 }
 
