Add 'Select date' label [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1475,6 +1475,7 @@ div.page-activity.well-child {
 
         &.date.previous {
           margin-left: 20px;
+          height: 100%;
           width: 60%;
         }
 
