--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1506,6 +1506,30 @@ div.page-activity.well-child {
           left: 0;
         }
       }
+
+      .future-vaccinations {
+        border-top: 2px solid $color-gray;
+        padding-top: 30px;
+
+        .next-vaccination {
+          margin-bottom: 10px;
+          margin-top: 15px;
+
+          .name {
+            float: left;
+            font-weight: 500;
+            height: 2em;
+            width: 80%;
+          }
+
+          .due-date {
+            float: left;
+            font-weight: 500;
+            height: 2em;
+            width: 18%;
+          }
+        }
+      }
     }
   }
 }
