Add and style icon [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -507,6 +507,10 @@ h3.ui.header {
   background-size: 152px 152px;
 }
 
+.icon-task-vaccination-history {
+  background-image: url(#{$img-path}icon-vaccination-history.svg);
+}
+
 // Tasks horizontal scroll
 
 .ui.task.segment {
