Review history button + 'catch up required' Input [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1534,6 +1534,10 @@ div.page-activity.well-child {
           }
         }
       }
+
+      .button.review-history {
+        margin-bottom: 30px;
+      }
     }
   }
 }
