Styling fix for #2657

--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -275,8 +275,10 @@
 
         .in-chart {
           font-size: 18px;
-          left: -150px;
-          top: 100px;
+          left: 82px;
+          line-height: 20px;
+          top: 95px;
+          width: 175px;
         }
 
         .legend {
